[project]
name = "realsense-pose-detector"
version = "0.1.0"
description = "A simple pose detector which runs with the realsense framework."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Florian Bruggisser", email = "florian@bildspur.ch" },
]
requires-python = ">=3.7"
dependencies = [
    "mediapipe>=0.10.10",
    "opencv-python>=4.11.0.86",
    "pyrealsense2>=2.55.1.6486",
    "python-osc>=1.8.3",
]
